# spammer-block

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  spammer-block.py
cli-utils/: spammer-block.py  spammer-reporter-service.py  spammer-reporter.py
rpm-package/: README.md  rpm.json  spammer-block  spammer-blocker  spammer-mapper-postfix  spammer-reporter  spammer-reputation
spammer_block_commands/: blocker.py  postfix_socketmap_service.py  reporter.py  reporter_service.py  reputation_db.py
spammer_block_lib/: __init__.py  config.py  daemon_log.py  gmail_reporter.py  sendgrid_reporter.py  spamcop_reporter.py  spammer_block.py  spammer_reporter.py
spammer_block_lib/config/: __init__.py  reader.py
spammer_block_lib/datasources/: __init__.py  datasource_base.py
spammer_block_lib/datasources/geoip2_asn/: __init__.py  query.py
spammer_block_lib/datasources/ipinfo_io_api/: __init__.py  query.py
spammer_block_lib/datasources/ipinfo_io_ui/: __init__.py  query.py
spammer_block_lib/datasources/radb/: __init__.py  query.py
spammer_block_lib/dbus/: __init__.py  folder_watcher.py  service.py  sssd.py
spammer_block_lib/ipinfo_io/: query.py
spammer_block_lib/output/: abstract.py  json.py  none.py  postfix.py
spammer_block_lib/outputs/: __init__.py  postfix.py
spammer_block_lib/postfix/: __init__.py  blocker_socketmap_responder.py  socketmap_responder.py  streamreader.py
spammer_block_lib/reporter/: __init__.py  abstract.py  abstract_smtp_reporter.py  gmail_reporter.py  mock_reporter.py  sendgrid_reporter.py  spamcop_reporter.py
spammer_block_lib/reputation/: __init__.py  db.py
systemd.service/: README.md  postfix-socketmap.conf  reporter.conf  spammer-mapper-postfix.service  spammer-reporter.service  spammer-reporter.toml  spamreporter-dbus.conf
systemd.service/SElinux/: spammer-block_policy.fc  spammer-block_policy.if  spammer-block_policy.sh  spammer-block_policy.te  spammer-block_policy_selinux.spec
