[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spammer-block"
version = "0.8"
authors = [{name = "Jari Turkia", email = "jatu@hqcodeshop.fi"}]
license = {text = "GPLv2"}
description = "Tool to get CIDRs of a known spammer IP-address by AS-number and report known spam automatically"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = {Homepage = "https://github.com/HQJaTu/spammer-block"}
requires-python = ">=3.8, <4"
dependencies = [
    "asyncinotify==2.0.2",
    "certifi==2023.5.7",
    "charset-normalizer==2.0.12",
    "dbus-python==1.2.18",
    "dnspython==2.0.0",
    "gbulb==0.6.3",
    "gobject==0.1.0",
    "idna==3.3",
    "ipwhois @ git+https://github.com/HQJaTu/ipwhois.git@9ac857bb7b593052a39919d4fbc7a479079474f4",
    "netaddr==0.8.0",
    "pycairo==1.21.0",
    "PyGObject==3.42.2",
    "python-systemd==0.0.9",
    "requests==2.27.1",
    "systemd==0.17.1",
    "systemd-watchdog==0.9.0",
    "cysystemd==1.5.4",
    "toml==0.10.2",
    "asyncio-glib==0.1",
]

[tool.setuptools.package-dir]
spammer_block_lib = "spammer_block_lib"
spammer_block_commands = "spammer_block_commands"

[project.scripts]
spammer-blocker = "spammer_block_commands.blocker:main"
spammer-reporter = "spammer_block_commands.reporter:main"
spammer-reporter-service = "spammer_block_commands.reporter_service:main"
