[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spammer-block"
version = "0.8.4"
authors = [{name = "Jari Turkia", email = "jatu@hqcodeshop.fi"}]
license = {text = "GPLv2"}
description = "Tool to get CIDRs of a known spammer IP-address by AS-number and report known spam automatically"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
urls = {Homepage = "https://github.com/HQJaTu/spammer-block"}
requires-python = ">=3.9, <4"
dependencies = [
    "asyncinotify==2.0.2",
    "certifi==2024.8.30",
    "charset-normalizer==2.0.12",
    "dbus-python==1.3.2",
    "dnspython==2.6.1",
    "gbulb==0.6.5",
    "gobject==0.1.0",
    "idna==3.8",
    "ipwhois @ git+https://github.com/HQJaTu/ipwhois.git@ipinfo.io",
    "netaddr==1.3.0",
    "pycairo==1.26.1",
    "PyGObject==3.48.2",
    "python-systemd==0.0.9",
    "requests==2.32.3",
    "systemd==0.17.1",
    "systemd-watchdog==0.9.0",
    "cysystemd==1.6.2",
    "toml==0.10.2",
    "asyncio-glib==0.1",
]

[tool.setuptools.package-dir]
spammer_block_lib = "spammer_block_lib"
spammer_block_commands = "spammer_block_commands"

[project.scripts]
spammer-blocker = "spammer_block_commands.blocker:main"
spammer-reporter = "spammer_block_commands.reporter:main"
spammer-reporter-service = "spammer_block_commands.reporter_service:main"
